# Full-Stack-TodoApp

./: README.md
TodoApp-Backend/dailyDo-todo-app/: .env  pyproject.toml
TodoApp-Backend/dailyDo-todo-app/dailydo_todo_app/: main.py  setting.py
TodoApp-Backend/dailyDo-todo-app/tests/: test_main.py
TodoApp-Frontend/frontend/: package-lock.json  package.json  types.d.ts
TodoApp-Frontend/frontend/app/: api.ts  layout.tsx  page.tsx
TodoApp-Frontend/frontend/app/components/: AddTask.tsx  Modal.tsx  Task.tsx  TodoList.tsx
TodoApp-Frontend/frontend/types/: tasks.ts
